GUI: preferredSize for MainFrame
Fixes outOfMem exception at startup on Linux
Thx Nicolas for tracking down this issue!

--- a/src/main/java/axoloti/swingui/MainFrame.form
+++ b/src/main/java/axoloti/swingui/MainFrame.form
@@ -49,6 +49,9 @@
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
       <Dimension value="[200, 200]"/>
     </Property>
+    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+      <Dimension value="[400, 320]"/>
+    </Property>
   </Properties>
   <SyntheticProperties>
     <SyntheticProperty name="menuBar" type="java.lang.String" value="jMenuBar1"/>
