GUI: PatchBank, FileManager mvc pattern,...
moving getController() to AJFrame,
undo/redo in StandardMenubar,
positioning added items in FileMenu,
moving SDCardInfo into TargetModel,
SDCard file content download,
upload .axp to SDCard along with .bin

--- a/src/main/java/axoloti/swingui/patch/PatchFrame.form
+++ b/src/main/java/axoloti/swingui/patch/PatchFrame.form
@@ -8,6 +8,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="File"/>
           </Properties>
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_InitCodePre" type="java.lang.String" value="fileMenu1.initComponents();"/>
+          </AuxValues>
           <SubComponents>
             <MenuItem class="javax.swing.JPopupMenu$Separator" name="jSeparator1">
             </MenuItem>
